--- a/form.html
+++ b/form.html
@@ -42,7 +42,9 @@
               </nav>
         </div>
     </section>
-    <h1>jamaler mar pitha khawar form</h1>
+    <div>
+      <h1>jamaler mar pitha khawar form</h1>
+    </div>
     </header>
     <form action="">
     <p> name: <input type="text" name="name" placeholder="enter yout name" id=""></p>
