--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
     <section>
         <div class="container mt-5">
             <div class="card Explore">
-                <div class="row">
-                  <div class="col-md-6 col-12  Explore-img">
-                    <img  src="./images/working.png" class="img-fluid rounded-start" alt="...">
+                <div class="row d-flex align-items-center">
+                  <div class="col-lg-6 col-md-12 col-12  Explore-img">
+                    <img class="w-100"  src="./images/working.png" class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-6 align-items-center">
                     <div class="card-body">
@@ -262,19 +262,75 @@
     <!----------------------------------
         ------ Register section --------
     ----------------------------------->
-    <section class="container mt-5">
-        <div class="bg-info row justify-content-around py-5 rounded text-center px-lg-5">
-            <div class=" col-lg-9 col-12 text-start">
-                <h1 class="display-5 text-white fw-bold">Ready to join?</h1>
-                    <p class="fs-5 text-white">
-                    The quality of education in this institution is very good. We want to read or <br> learn about any subject.  You can get admission in this institution.
-                </p>
+    <section class="mt-5">
+      <div class="container bg-primary text-white rounded p-5">
+        <div
+          class="d-flex flex-lg-row flex-md-column flex-column justify-content-between align-items-center p-lg-5 p-md-2 p-0">
+          <div class="text-center text-md-center text-lg-start">
+            <h2 class="fs-1 fw-semibold mb-3">Ready to join?</h2>
+            <p>I've been training here all the while but now my bags are <br> packed and I'm ready to join the team in Bangladesh.</p>
+          </div>
+          <div>
+            <!-- ! modal start -->
+            <!-- Button trigger modal -->
+            <button type="button" class="btn bg-white text-primary py-3 px-5 fw-bold border-0" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Regigter Now
+            </button>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content text-dark">
+                  <div class="modal-header">
+                    <h5 class="modal-title fw-bold" id="exampleModalLabel">Regigter</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <form>
+                      <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="floatingInput" placeholder="Enter Your Name">
+                        <label for="floatingInput">User Name</label>
+                      </div>
+                      <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput">Email address</label>
+                      </div>
+                      <div class="form-floating">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                        <label for="floatingPassword">Password</label>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary fw-semibold" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary fw-semibold">Submit</button>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="col-lg-3 col-12 mt-lg-5 ">
-                <button class="btn px-4 fs-5 bg-white text-info fw-bold">Register now </button>
-            </div>
+            <!-- <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+              aria-labelledby="staticBackdropLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    ...
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Understood</button>
+                  </div>
+                </div>
+              </div>
+            </div> -->
+            <!-- ! modal end -->
+          </div>
         </div>
+      </div>
     </section>
+  
     <!---------------------------------
         ------ Students section -------
     ----------------------------------->
@@ -413,7 +469,7 @@
                 <h1 class="fw-bold roboto">Frequently Asked Questions</h1>
                 <p>The quality of education in this institution is very good. We want to read or <br> learn about any subject. You can get admission in this institution.</p>
             </div>
-            <div class="accordion mt-3" id="accordionExample">
+            <div class="accordion mt-3 p-xl-5 p-lg-4 p-md-2 p-1" id="accordionExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -499,10 +555,10 @@
         <p class="text-white roboto">state in Bangladesh</p>
         <p class="text-white roboto">Privacy Ploicy | Terms of use</p>
         <div class="  fs-1">
-            <a href=""><i class="fa-brands fa-square-facebook text-white"></i></a>
-            <a href=""><i class="fa-brands fa-square-twitter text-white"></i></a>
-            <a href=""><i class="fa-brands fa-instagram text-white"></i></a>
-            <a href=""><i class="fa-brands fa-tiktok text-white"></i></a>
+            <a href="https://web.facebook.com/?_rdc=1&_rdr"><i class="fa-brands fa-square-facebook text-white"></i></a>
+            <a href="https://twitter.com/?lang=en"><i class="fa-brands fa-square-twitter text-white"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram text-white"></i></a>
+            <a href="https://www.tiktok.com/"><i class="fa-brands fa-tiktok text-white"></i></a>
 
         </div>
     </footer>
